# proto-robotstxt

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  MODULE.bazel  README.md  build.sh  go.mod  go.sum  run.sh  setup.sh  test.sh
.github/workflows/: ci.yml
bench/: README.md  bench.sh  bench_test.go  profile.sh  recover_bench_test.go
cmd/gluon/: main.go
docker/: README.md
docs/: README.md  TODO.md
docs/design/: malformed-input.md  two-tier-parsing.md
docs/google-dev-docs/: README.md  crawling-docs-about-crawling.md  crawling-docs-changelog.md  crawling-docs-crawl-budget.md  crawling-docs-crawlers-fetchers-apis-user-agent.md  crawling-docs-crawlers-fetchers-feedfetcher.md  crawling-docs-crawlers-fetchers-google-common-crawlers.md  crawling-docs-crawlers-fetchers-google-special-case-crawlers.md  crawling-docs-crawlers-fetchers-google-user-triggered-fetchers.md  crawling-docs-faceted-navigation.md  (+56 more)
fuzz/: README.md  fuzz_test.go
grammar/: embed.go  rep.ebnf
proto/: recover.proto  rep.proto
src-gluon/: README.md  events.go  genproto.go  google.go  matcher.go  matcher_test.go  matchers.go  metadata.go  parse.go  recover.go  recover_test.go  recoverproto.go  render.go  render_test.go  rep.go  robotsgluon_test.go
src-google/: BUILD  VENDOR.md
testdata/: README.md  accretional-robots.txt  case-variation.txt  comments-everywhere.txt  cr-endings.txt  crlf-endings.txt  empty-values.txt  groups-merging.txt  matcher-cases.tsv  percent-encoding-utf8.txt  realistic-large.txt  rfc-example.txt  unknown-directives.txt  whitespace-torture.txt  wildcards.txt
(+32 files in other folders)
